# Blast2D

./: CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
Blast2D/: Blast2D.cpp  Blast2D.h  CMakeLists.txt  editor.cpp  game.cpp  game.hpp  main.cpp  project.rc  server.cpp
Blast2D/components/graphics/: window.hpp
Blast2D/core/: CMakeLists.txt  color.hpp
Blast2D/core/components/: Application.hpp  application.hpp  transform.hpp
Blast2D/core/ecs/: component_register.hpp  entity.hpp  entity_manager.hpp  sparse_set.hpp  storage.hpp  type_info.hpp  view.hpp
Blast2D/core/graphics/: color.hpp  image.hpp
Blast2D/core/input/: input.hpp  key_state.hpp  keys.hpp  mouse.hpp
Blast2D/core/logging/: CMakeLists.txt  chronometer.hpp
Blast2D/core/math/: ivector2.hpp  matrix4.hpp  quad_tree.hpp  rect.hpp  vector2.hpp  vector3.hpp  vector4.hpp
Blast2D/core/reflection/: reflection.hpp
Blast2D/core/resource/: file_utils.hpp  resource.hpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp
Blast2D/core/system/: CMakeLists.txt  system.cpp  system.hpp  system_manager.cpp  system_manager.hpp  thread_pool.hpp
Blast2D/ecs/: component.hpp  component_data_pool.hpp  component_register.hpp  entity.hpp  entity_manager.hpp  entity_set.hpp  sparse_set.hpp  storage.hpp  view.hpp
Blast2D/game/: CMakeLists.txt  loader.hpp
Blast2D/game/components/: tile_map.hpp
Blast2D/game/loaders/: scene_loader.cpp  scene_loader.hpp
Blast2D/game/resources/: scene.hpp
Blast2D/game/systems/: scene_system.cpp  scene_system.hpp
Blast2D/logging/: CMakeLists.txt  chronometer.hpp
Blast2D/modules/game/: CMakeLists.txt
Blast2D/modules/graphics/: CMakeLists.txt
Blast2D/modules/graphics/components/: animated_sprite.hpp  camera.hpp  mesh.hpp  shader.hpp  sprite.hpp  vertex_buffer.hpp  vertex_position_color_texture.hpp  window.hpp
Blast2D/modules/graphics/libs/: shelf-pack.hpp  stb_image_write.h
Blast2D/modules/graphics/libs/imgui/: imgui_impl_glfw.cpp
Blast2D/modules/graphics/loaders/: sprite_sheet_loader.cpp  sprite_sheet_loader.hpp
Blast2D/modules/graphics/resources/: Texture2D.hpp  color.hpp  image.hpp  sprite_sheet.hpp  texture_2d.hpp
Blast2D/modules/graphics/services/: image_service.cpp  image_service.hpp  shader_service.cpp  shader_service.hpp  sprite_batch_service.cpp  sprite_batch_service.hpp  sprite_shader_service.cpp  sprite_shader_service.hpp  texture_service.cpp  texture_service.hpp  vertex_buffer_service.cpp  vertex_buffer_service.hpp
Blast2D/modules/graphics/system/: CMakeLists.txt  camera_system.cpp  camera_system.hpp  render_system.cpp  render_system.hpp  window_system.cpp  window_system.hpp
Blast2D/system/: thread_pool.hpp
resources/game-test/: root.scene
resources/game-test/sprites/: sprites.spritesheet
